[package]
name = "animated-couscous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
protobuf = "3.3.0"
rand = "0.8.5"

[build-dependencies]
protobuf-codegen = "3.3.0"

# [[bin]]
# name = "force-build"
# path = "build.rs"
# required-features = ["build_deps"] # only needed for build-dependencies
