[package]
name = "animated-couscous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.4"
bevy_rapier2d = { version = "0.25.0", features = ["enhanced-determinism"] }
crossbeam-channel = "0.5.8"
csscolorparser = "0.6.2"
derive-error = "0.0.5"
lru = "0.12.0"
phf = "0.11.2"
protobuf = "3.3.0"
svg = "0.14.0"
uuid = "1.5.0"

[build-dependencies]
protobuf-codegen = "3.3.0"

# [[bin]]
# name = "force-build"
# path = "build.rs"
# required-features = ["build_deps"] # only needed for build-dependencies
